--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-auth-routes-template",
+  "name": "react-reading-list",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
